update before setting up on greenlight

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # unbind some default keybindings
 #unbind C-b
+#
 
 # set prefix key 
 set -g prefix C-p
@@ -24,9 +25,12 @@ bind - split-window -v
 
 # vim / xmonad style bindings for pane movement
 bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+# bind -r j select-pane -D
+# just grab the next pane with j
+bind j select-pane -t :.+
+bind k select-pane -t :.-
+bind k select-pane -U
+bind l select-pane -R
 
 # vim / xmonad style bindings for window movement
 bind -r C-h select-window -t :-
@@ -39,10 +43,15 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # disable mouse support (at least while we're learning)
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+#setw -g mode-mouse off
+#set -g mouse-select-pane off
+#set -g mouse-resize-pane off
+#set -g mouse-select-window off
+
+set-option -g mouse-select-pane off
+set-option -g mouse-resize-pane off
+set-option -g mouse-select-window off
+set-window-option -g mode-mouse off
 
 # turn on 256 color support in tmux
 set -g default-terminal "screen-256color"
@@ -127,3 +136,4 @@ set-option -g display-panes-colour colour196 #orange
 # clock
 set-window-option -g clock-mode-colour colour40 #green
 
+#set -g mouse-select-pane on
