--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,10 +27,10 @@ bind - split-window -v
 bind -r h select-pane -L
 # bind -r j select-pane -D
 # just grab the next pane with j
-bind j select-pane -t :.+
-bind k select-pane -t :.-
-bind k select-pane -U
-bind l select-pane -R
+#bind j select-pane -t :.+
+#bind k select-pane -t :.-
+#bind k select-pane -U
+#bind l select-pane -R
 
 # vim / xmonad style bindings for window movement
 bind -r C-h select-window -t :-
@@ -48,10 +48,10 @@ bind -r L resize-pane -R 5
 #set -g mouse-resize-pane off
 #set -g mouse-select-window off
 
+set-window-option -g mode-mouse off
 set-option -g mouse-select-pane off
 set-option -g mouse-resize-pane off
 set-option -g mouse-select-window off
-set-window-option -g mode-mouse off
 
 # turn on 256 color support in tmux
 set -g default-terminal "screen-256color"
@@ -113,12 +113,13 @@ set-option -g status-attr default
 
 # default window title colors
 set-window-option -g window-status-fg colour33 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-bg colour235
+set-window-option -g window-status-attr dim
 
 # active window title colors
 set-window-option -g window-status-current-fg colour196 #orange
-set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-bg colour235
 #set-window-option -g window-status-current-attr bright
 
 # pane border
@@ -136,4 +137,47 @@ set-option -g display-panes-colour colour196 #orange
 # clock
 set-window-option -g clock-mode-colour colour40 #green
 
+#set-window-option -g mode-mouse on
 #set -g mouse-select-pane on
+#
+#unbind -n C-k
+unbind -n C-l
+#unbind -n k
+#unbind -n l
+#unbind -n A-k
+unbind -n C-i
+
+# smart pane switching with awareness of vim splits
+#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+# smart pane switching without awareness of vim splits
+bind -n C-h run "tmux select-pane -L"
+bind -n C-j run "tmux select-pane -D"
+bind -n C-k run "tmux select-pane -U"
+bind -n C-l run "tmux select-pane -R"
+bind -n C-\ run "tmux select-pane -l"
+
+# Toggle mouse on with ^p m
+bind m \
+  set -g mode-mouse on \;\
+  set -g mouse-resize-pane on \;\
+  set -g mouse-select-pane on \;\
+  set -g mouse-select-window on \;\
+  display 'Mouse: ON'
+
+# Toggle mouse off with ^p M
+bind M \
+  set -g mode-mouse off \;\
+  set -g mouse-resize-pane off \;\
+  set -g mouse-select-pane off \;\
+  set -g mouse-select-window off \;\
+  display 'Mouse: OFF'
+
+# window movement into panes
+bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+# pane movement between windows
+bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
