updates before upgrade to osx Sierra

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@
 
 # set prefix key 
 set -g prefix C-p
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
 
 # lower command delay
 set -sg escape-time 1
@@ -48,10 +48,10 @@ bind -r L resize-pane -R 5
 #set -g mouse-resize-pane off
 #set -g mouse-select-window off
 
-set-window-option -g mode-mouse off
-set-option -g mouse-select-pane off
-set-option -g mouse-resize-pane off
-set-option -g mouse-select-window off
+#set-window-option -g mode-mouse off
+#set-option -g mouse-select-pane off
+#set-option -g mouse-resize-pane off
+#set-option -g mouse-select-window off
 
 # turn on 256 color support in tmux
 set -g default-terminal "screen-256color"
