user-space setup for xterm16 colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,8 @@
 
 # set prefix key 
 set -g prefix C-p
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /usr/bin/zsh
+#set-option -g default-shell /usr/bin/bash
 
 # lower command delay
 set -sg escape-time 1
