fixed location of zsh so tmux will start

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@
 
 # set prefix key 
 set -g prefix C-p
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /bin/zsh
 #set-option -g default-shell /usr/bin/bash
 
 # lower command delay
