--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -83,7 +83,7 @@ set -g message-bg colour22
 set -g message-attr bright
 
 # configure contents of status bar
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-left-length 40
 set -g status-left "#[fg=green]\"#S\""
 
@@ -100,8 +100,12 @@ setw -g mode-keys vi
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+#bind -t vi-copy 'v' begin-selection
+#bind -t vi-copy 'y' copy-selection
+# Things changed with a new version of tmux; these are required for 2.5 
+# and possibly earlier
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 
 
@@ -147,6 +151,7 @@ unbind -n C-l
 #unbind -n l
 #unbind -n A-k
 unbind -n C-i
+unbind -n C-h
 
 # smart pane switching with awareness of vim splits
 #bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
@@ -156,9 +161,10 @@ unbind -n C-i
 #bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # smart pane switching without awareness of vim splits
-bind -n C-h run "tmux select-pane -L"
+# C-h is a big emacs command so we disable it for spacemacs
+#bind -n C-h run "tmux select-pane -L"
 bind -n C-j run "tmux select-pane -D"
-bind -n C-k run "tmux select-pane -U"
+#bind -n C-k run "tmux select-pane -U"
 bind -n C-l run "tmux select-pane -R"
 bind -n C-\ run "tmux select-pane -l"
 
