--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -188,3 +188,19 @@ bind M \
 bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 # pane movement between windows
 bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
+# Tmux plugin
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'git@github.com/jdxcode/tmux-weather'
+
+set -g status-left '#(/usr/local/bin/tmux-weather/bin/tmux-weather)'
+#
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+#
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
