changing prefix key

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@
 #
 
 # set prefix key 
-set -g prefix C-p
+set -g prefix C-\\
 set-option -g default-shell /bin/zsh
 #set-option -g default-shell /usr/bin/bash
 
