--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,9 @@
 #unbind C-b
 #
 
+unbind 'C-\'
 # set prefix key 
-set -g prefix C-\\
+set -g prefix 'C-\'
 set-option -g default-shell /bin/zsh
 #set-option -g default-shell /usr/bin/bash
 
