--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -109,13 +109,21 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 
-
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
-set-option -g status-fg colour130 #yellow
+set-option -g status-fg colour166 #yellow
 set-option -g status-attr default
+
+#colour160
+#colour166
+#colour136
+#colour64
+#colour33
+#colour61
+#colour125
+#colour37
 
 # default window title colors
 set-window-option -g window-status-fg colour33 #base0
@@ -123,25 +131,25 @@ set-window-option -g window-status-bg colour235
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour196 #orange
+set-window-option -g window-status-current-fg colour166 #orange
 #set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-bg colour235
 #set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour46 #base01
+set-option -g pane-active-border-fg colour240 #base01
 
 # message text
 set-option -g message-bg colour235 #base02
-set-option -g message-fg colour196 #orange
+set-option -g message-fg colour166 #orange
 
 # pane number display
-set-option -g display-panes-active-colour colour20 #blue
-set-option -g display-panes-colour colour196 #orange
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
 
 # clock
-set-window-option -g clock-mode-colour colour40 #green
+set-window-option -g clock-mode-colour colour64 #green
 
 #set-window-option -g mode-mouse on
 #set -g mouse-select-pane on
