--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,8 @@
 unbind 'C-\'
 # set prefix key 
 set -g prefix 'C-\'
-set-option -g default-shell /bin/zsh
-#set-option -g default-shell /usr/bin/bash
+#set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/bash
 
 # lower command delay
 set -sg escape-time 1
@@ -101,13 +101,18 @@ setw -g mode-keys vi
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-#bind -t vi-copy 'v' begin-selection
-#bind -t vi-copy 'y' copy-selection
+
+run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
+                            sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.5" | bc)" = 1 ]' " \
+    bind -t vi-copy 'v' begin-selection\
+    bind -t vi-copy 'y' copy-selection"
 # Things changed with a new version of tmux; these are required for 2.5 
 # and possibly earlier
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.5" | bc)" = 1 ]' " \
+    bind-key -T copy-mode-vi v send-keys -X begin-selection\
+    bind-key -T copy-mode-vi y send-keys -X copy-selection"
 
 #### COLOUR (Solarized dark)
 
