--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -180,7 +180,7 @@ unbind -n C-h
 bind -n C-j run "tmux select-pane -D"
 #bind -n C-k run "tmux select-pane -U"
 bind -n C-l run "tmux select-pane -R"
-bind -n C-\ run "tmux select-pane -l"
+#bind -n C-\ run "tmux select-pane -l" # CONFLICT with prefix
 
 # Toggle mouse on with ^p m
 bind m \
