--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -101,6 +101,12 @@ setw -g mode-keys vi
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+# Things changed with a new version of tmux; these are required for 2.5 
+# and possibly earlier
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
                             sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
