--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -168,18 +168,17 @@ unbind -n C-i
 unbind -n C-h
 
 # smart pane switching with awareness of vim splits
-#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 #bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-# smart pane switching without awareness of vim splits
 # C-h is a big emacs command so we disable it for spacemacs
 #bind -n C-h run "tmux select-pane -L"
-bind -n C-j run "tmux select-pane -D"
+#bind -n C-j run "tmux select-pane -D"
 #bind -n C-k run "tmux select-pane -U"
-bind -n C-l run "tmux select-pane -R"
+#bind -n C-l run "tmux select-pane -R"
 #bind -n C-\ run "tmux select-pane -l" # CONFLICT with prefix
 
 # Toggle mouse on with ^p m
