--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@
 unbind 'C-\'
 # set prefix key 
 set-option -g default-shell /usr/local/bin/zsh
-set -g prefix C-\\
+set -g prefix C-"\\"
 
 # lower command delay
 set -sg escape-time 1
@@ -142,7 +142,7 @@ set-window-option -g window-status-bg colour235
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-fg colour196 # red
 #set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-bg colour235
 #set-window-option -g window-status-current-attr bright
@@ -184,8 +184,6 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 #bind -n C-h run "tmux select-pane -L"
 #bind -n C-j run "tmux select-pane -D"
 #bind -n C-k run "tmux select-pane -U"
-#bind -n C-l run "tmux select-pane -R"
-#bind -n C-\ run "tmux select-pane -l" # CONFLICT with prefix
 
 # Toggle mouse on with ^p m
 bind m \
