finnaly figured out solarized tmux colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -100,8 +100,8 @@ setw -g mode-keys vi
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+#bind -t vi-copy 'v' begin-selection
+#bind -t vi-copy 'y' copy-selection
 # Things changed with a new version of tmux; these are required for 2.5 
 # and possibly earlier
 #bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -122,11 +122,32 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.5" | bc)" = 1 ]' " \
 
 #### COLOUR (Solarized dark)
 
+# If using iTerm2, the first 16 colors are mapped to the pallete.  They appear
+# to be in-order, top to bottom through normal then top to bottom through
+# bright
+
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour166 #yellow
+set-option -g status-bg colour0 #base02
+set-option -g status-fg colour1 #yellow
 set-option -g status-attr default
 
+# colour0
+# colour1
+# colour2
+# colour3
+# colour4
+# colour5
+# colour6
+# colour7
+# colour8
+# colour9
+# colour10
+# colour11
+# colour12
+# colour13
+# colour14
+# colour15
+# 
 #colour160
 #colour166
 #colour136
@@ -137,14 +158,13 @@ set-option -g status-attr default
 #colour37
 
 # default window title colors
-set-window-option -g window-status-fg colour33 #base0
-set-window-option -g window-status-bg colour235
+set-window-option -g window-status-fg colour4
+set-window-option -g window-status-bg colour0
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour196 # red
-#set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-bg colour235
+set-window-option -g window-status-current-fg colour1 # red
+set-window-option -g window-status-current-bg colour0
 #set-window-option -g window-status-current-attr bright
 
 # pane border
@@ -152,15 +172,15 @@ set-option -g pane-border-fg colour235 #base02
 set-option -g pane-active-border-fg colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-bg colour0 #base02
+set-option -g message-fg colour1 #orange
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 
 # clock
-set-window-option -g clock-mode-colour colour64 #green
+set-window-option -g clock-mode-colour colour2 #green
 
 #set-window-option -g mode-mouse on
 #set -g mouse-select-pane on
