--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -101,6 +101,13 @@ setw -g mode-keys vi
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
+# Tmux 2.1 requires these
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+# Things changed with a new version of tmux; these are required for 2.5 
+# and possibly earlier
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
                             sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
@@ -180,7 +187,6 @@ unbind -n C-h
 bind -n C-j run "tmux select-pane -D"
 #bind -n C-k run "tmux select-pane -U"
 bind -n C-l run "tmux select-pane -R"
-#bind -n C-\ run "tmux select-pane -l" # CONFLICT with prefix
 
 # Toggle mouse on with ^p m
 bind m \
