--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@
 
 unbind 'C-\'
 # set prefix key 
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /bin/zsh
 set -g prefix C-"\\"
 
 # lower command delay
@@ -58,18 +58,18 @@ bind -r L resize-pane -R 5
 set -g default-terminal "screen-256color"
 
 # fiddle with colors of status bar
-set -g status-fg white
-set -g status-bg colour234
+#set -g status-fg white
+#set -g status-bg colour234
 
 # fiddle with colors of inactive windows
-setw -g window-status-fg cyan
-setw -g window-status-bg colour234
-setw -g window-status-attr dim
+#setw -g window-status-fg cyan
+#setw -g window-status-bg colour234
+#setw -g window-status-attr dim
 
 # change color of active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg colour88
-setw -g window-status-current-attr bright
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg colour88
+#setw -g window-status-current-attr bright
 
 # set color of regular and active panes
 set -g pane-border-fg colour238
@@ -122,32 +122,22 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.5" | bc)" = 1 ]' " \
     bind-key -T copy-mode-vi y send-keys -X copy-selection"
 
 #### COLOUR (Solarized dark)
-
-# If using iTerm2, the first 16 colors are mapped to the pallete.  They appear
-# to be in-order, top to bottom through normal then top to bottom through
-# bright
-
-# default statusbar colors
-set-option -g status-bg colour0 #base02
-set-option -g status-fg colour1 #yellow
-set-option -g status-attr default
-
-# colour0
-# colour1
-# colour2
-# colour3
-# colour4
-# colour5
-# colour6
-# colour7
-# colour8
-# colour9
-# colour10
-# colour11
-# colour12
-# colour13
-# colour14
-# colour15
+#colour0
+#colour1
+#colour2
+#colour3
+#colour4
+#colour5
+#colour6
+#colour7
+#colour8
+#colour9
+#colour10
+#colour11
+#colour12
+#colour13
+#colour14
+#colour15
 # 
 #colour160
 #colour166
@@ -158,9 +148,19 @@ set-option -g status-attr default
 #colour125
 #colour37
 
+
+# If using iTerm2, the first 16 colors are mapped to the pallete.  They appear
+# to be in-order, top to bottom through normal then top to bottom through
+# bright. IF YOU START tmux with -2
+
+# default statusbar colors
+set-option -g status-bg colour8 
+set-option -g status-fg colour1 
+set-option -g status-attr default
+
 # default window title colors
 set-window-option -g window-status-fg colour4
-set-window-option -g window-status-bg colour0
+set-window-option -g window-status-bg colour8
 set-window-option -g window-status-attr dim
 
 # active window title colors
@@ -169,8 +169,8 @@ set-window-option -g window-status-current-bg colour0
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-fg colour10 #base02
+set-option -g pane-active-border-fg colour2 #base01
 
 # message text
 set-option -g message-bg colour0 #base02
@@ -256,6 +256,7 @@ bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 # set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
 # setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
 # setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+#set -g status-left '#[fg=green]"#S" #(~/bin/tmux-weather)'
 set -g status-left '#(~/bin/tmux-weather)'
 
 # Tmux plugin
