updated path to zsh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@
 
 unbind 'C-\'
 # set prefix key 
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /bin/zsh
 set -g prefix C-"\\"
 
 # lower command delay
