better tmux colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -262,6 +262,7 @@ set -g status-left '#(~/bin/tmux-weather)'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'seebi/tmux-colors-solarized'
 #set -g @plugin 'git@github.com/jdxcode/tmux-weather'
 
 #set -g status-left '#(/usr/local/bin/tmux-weather/bin/tmux-weather)'
