--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,7 +55,8 @@ bind -r L resize-pane -R 5
 #set-option -g mouse-select-window off
 
 # turn on 256 color support in tmux
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
+set -g default-terminal "xterm"
 
 # fiddle with colors of status bar
 set -g status-fg white
@@ -263,6 +264,8 @@ set -g status-left '#(~/bin/tmux-weather)'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @colors-solarized 'dark'
+# customized (slightly) by modifiying ~/.tmux/plugins/tmux-colors-solarized/tmuxcolors-dark.conf
 #set -g @plugin 'git@github.com/jdxcode/tmux-weather'
 
 #set -g status-left '#(/usr/local/bin/tmux-weather/bin/tmux-weather)'
