better active window color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,7 @@
 unbind 'C-\'
 # set prefix key 
 set-option -g default-shell /usr/local/bin/zsh
+#set-option -g default-shell /bin/bash
 set -g prefix C-"\\"
 
 # lower command delay
@@ -34,7 +35,7 @@ bind -r h select-pane -L
 #bind l select-pane -R
 
 # vim / xmonad style bindings for window movement
-bind -r C-h select-window -t :-
+#bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # shift-movement keys will resize panes
@@ -56,7 +57,8 @@ bind -r L resize-pane -R 5
 
 # turn on 256 color support in tmux
 #set -g default-terminal "screen-256color"
-set -g default-terminal "xterm"
+set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm"
 
 # fiddle with colors of status bar
 set -g status-fg white
@@ -165,7 +167,7 @@ set-window-option -g window-status-bg colour0
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour1 # red
+set-window-option -g window-status-current-fg colour4 # red
 set-window-option -g window-status-current-bg colour0
 #set-window-option -g window-status-current-attr bright
 
@@ -193,7 +195,6 @@ unbind -n C-l
 #unbind -n l
 #unbind -n A-k
 unbind -n C-i
-unbind -n C-h
 
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
@@ -201,6 +202,7 @@ bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 #bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+unbind -n C-h
 
 # C-h is a big emacs command so we disable it for spacemacs
 #bind -n C-h run "tmux select-pane -L"
@@ -257,6 +259,7 @@ bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 # set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
 # setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
 # setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+
 set -g status-left '#(~/bin/tmux-weather)'
 
 # Tmux plugin
