color updates and improvements

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,8 +61,8 @@ set -g default-terminal "xterm-256color"
 #set -g default-terminal "xterm"
 
 # fiddle with colors of status bar
-set -g status-fg white
-set -g status-bg colour234
+#set -g status-fg white
+#set -g status-bg colour234
 
 # fiddle with colors of inactive windows
 setw -g window-status-fg cyan
@@ -131,7 +131,6 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.5" | bc)" = 1 ]' " \
 # bright
 
 # default statusbar colors
-set-option -g status-bg colour0 #base02
 set-option -g status-fg colour1 #yellow
 set-option -g status-attr default
 
@@ -268,6 +267,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @colors-solarized 'dark'
+
 # customized (slightly) by modifiying ~/.tmux/plugins/tmux-colors-solarized/tmuxcolors-dark.conf
 #set -g @plugin 'git@github.com/jdxcode/tmux-weather'
 
@@ -280,3 +280,4 @@ set -g @colors-solarized 'dark'
 #
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+set-option -g status-bg colour8 #base02
