tmux color updates

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,25 +65,25 @@ set -g default-terminal "xterm-256color"
 #set -g status-bg colour234
 
 # fiddle with colors of inactive windows
-setw -g window-status-fg cyan
-setw -g window-status-bg colour234
-setw -g window-status-attr dim
-
-# change color of active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg colour88
-setw -g window-status-current-attr bright
-
-# set color of regular and active panes
-set -g pane-border-fg colour238
-set -g pane-border-bg default
-set -g pane-active-border-fg green
-set -g pane-active-border-bg default
-
-# set color of command line
-set -g message-fg white
-set -g message-bg colour22
-set -g message-attr bright
+# setw -g window-status-fg cyan
+# setw -g window-status-bg colour234
+# setw -g window-status-attr dim
+# 
+# # change color of active window
+# setw -g window-status-current-fg white
+# setw -g window-status-current-bg colour88
+# setw -g window-status-current-attr bright
+# 
+# # set color of regular and active panes
+# set -g pane-border-fg colour238
+# set -g pane-border-bg default
+# set -g pane-active-border-fg green
+# set -g pane-active-border-bg default
+# 
+# # set color of command line
+# set -g message-fg white
+# set -g message-bg colour22
+# set -g message-attr bright
 
 # configure contents of status bar
 #set -g status-utf8 on
@@ -132,7 +132,7 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.5" | bc)" = 1 ]' " \
 
 # default statusbar colors
 set-option -g status-fg colour1 #yellow
-set-option -g status-attr default
+#set-option -g status-attr default
 
 # colour0
 # colour1
@@ -161,22 +161,22 @@ set-option -g status-attr default
 #colour37
 
 # default window title colors
-set-window-option -g window-status-fg colour4
-set-window-option -g window-status-bg colour0
-set-window-option -g window-status-attr dim
+# set-window-option -g window-status-fg colour4
+# set-window-option -g window-status-bg colour0
+# set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour4 # red
-set-window-option -g window-status-current-bg colour0
-#set-window-option -g window-status-current-attr bright
+# set-window-option -g window-status-current-fg colour4 # red
+# set-window-option -g window-status-current-bg colour0
+# set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+# set-option -g pane-border-fg colour235 #base02
+# set-option -g pane-active-border-fg colour240 #base01
 
 # message text
-set-option -g message-bg colour0 #base02
-set-option -g message-fg colour1 #orange
+# set-option -g message-bg colour0 #base02
+# set-option -g message-fg colour1 #orange
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
